ParKlatte.info
-----------------------------------------------------------------------------
Info file generated by Happy Version 1.19.2 from ParKlatte.y
-----------------------------------------------------------------------------

state 56 contains 2 shift/reduce conflicts.
state 57 contains 2 shift/reduce conflicts.

terminal L_err is unused

-----------------------------------------------------------------------------
Grammar
-----------------------------------------------------------------------------
	%start_pListStmt -> ListStmt                       (0)
	%start_pStmt -> Stmt                               (1)
	%start_pExpr6 -> Expr6                             (2)
	%start_pExpr5 -> Expr5                             (3)
	%start_pExpr4 -> Expr4                             (4)
	%start_pExpr3 -> Expr3                             (5)
	%start_pExpr2 -> Expr2                             (6)
	%start_pExpr1 -> Expr1                             (7)
	%start_pExpr -> Expr                               (8)
	%start_pListExpr -> ListExpr                       (9)
	%start_pAddOp -> AddOp                             (10)
	%start_pMulOp -> MulOp                             (11)
	%start_pRelOp -> RelOp                             (12)
	Ident -> L_ident                                   (13)
	Integer -> L_integ                                 (14)
	ListStmt ->                                        (15)
	ListStmt -> ListStmt Stmt                          (16)
	Stmt -> ';'                                        (17)
	Stmt -> Stmt Stmt                                  (18)
	Stmt -> Ident '=' Expr ';'                         (19)
	Expr6 -> Ident                                     (20)
	Expr6 -> Integer                                   (21)
	Expr6 -> 'true'                                    (22)
	Expr6 -> 'false'                                   (23)
	Expr6 -> '(' Expr ')'                              (24)
	Expr5 -> '-' Expr6                                 (25)
	Expr5 -> '!' Expr6                                 (26)
	Expr5 -> Expr6                                     (27)
	Expr4 -> Expr4 MulOp Expr5                         (28)
	Expr4 -> Expr5                                     (29)
	Expr3 -> Expr3 AddOp Expr4                         (30)
	Expr3 -> Expr4                                     (31)
	Expr2 -> Expr2 RelOp Expr3                         (32)
	Expr2 -> Expr3                                     (33)
	Expr1 -> Expr2 '&&' Expr1                          (34)
	Expr1 -> Expr2                                     (35)
	Expr -> Expr1 '||' Expr                            (36)
	Expr -> Expr1                                      (37)
	ListExpr ->                                        (38)
	ListExpr -> Expr                                   (39)
	ListExpr -> Expr ',' ListExpr                      (40)
	AddOp -> '+'                                       (41)
	AddOp -> '-'                                       (42)
	MulOp -> '*'                                       (43)
	MulOp -> '/'                                       (44)
	MulOp -> '%'                                       (45)
	RelOp -> '<'                                       (46)
	RelOp -> '<='                                      (47)
	RelOp -> '>'                                       (48)
	RelOp -> '>='                                      (49)
	RelOp -> '=='                                      (50)
	RelOp -> '!='                                      (51)

-----------------------------------------------------------------------------
Terminals
-----------------------------------------------------------------------------
	'!'            { PT _ (TS _ 1) }
	'!='           { PT _ (TS _ 2) }
	'%'            { PT _ (TS _ 3) }
	'&&'           { PT _ (TS _ 4) }
	'('            { PT _ (TS _ 5) }
	')'            { PT _ (TS _ 6) }
	'*'            { PT _ (TS _ 7) }
	'+'            { PT _ (TS _ 8) }
	','            { PT _ (TS _ 9) }
	'-'            { PT _ (TS _ 10) }
	'/'            { PT _ (TS _ 11) }
	';'            { PT _ (TS _ 12) }
	'<'            { PT _ (TS _ 13) }
	'<='           { PT _ (TS _ 14) }
	'='            { PT _ (TS _ 15) }
	'=='           { PT _ (TS _ 16) }
	'>'            { PT _ (TS _ 17) }
	'>='           { PT _ (TS _ 18) }
	'false'        { PT _ (TS _ 19) }
	'true'         { PT _ (TS _ 20) }
	'||'           { PT _ (TS _ 21) }
	L_ident        { PT _ (TV $$) }
	L_integ        { PT _ (TI $$) }
	L_err          { _ }

-----------------------------------------------------------------------------
Non-terminals
-----------------------------------------------------------------------------
	%start_pListStmt rule  0
	%start_pStmt    rule  1
	%start_pExpr6   rule  2
	%start_pExpr5   rule  3
	%start_pExpr4   rule  4
	%start_pExpr3   rule  5
	%start_pExpr2   rule  6
	%start_pExpr1   rule  7
	%start_pExpr    rule  8
	%start_pListExpr rule  9
	%start_pAddOp   rule  10
	%start_pMulOp   rule  11
	%start_pRelOp   rule  12
	Ident           rule  13
	Integer         rule  14
	ListStmt        rules 15, 16
	Stmt            rules 17, 18, 19
	Expr6           rules 20, 21, 22, 23, 24
	Expr5           rules 25, 26, 27
	Expr4           rules 28, 29
	Expr3           rules 30, 31
	Expr2           rules 32, 33
	Expr1           rules 34, 35
	Expr            rules 36, 37
	ListExpr        rules 38, 39, 40
	AddOp           rules 41, 42
	MulOp           rules 43, 44, 45
	RelOp           rules 46, 47, 48, 49, 50, 51

-----------------------------------------------------------------------------
States
-----------------------------------------------------------------------------
State 0


	';'            reduce using rule 15
	L_ident        reduce using rule 15
	%eof           reduce using rule 15

	ListStmt       goto state 55

State 1


	';'            shift, and enter state 54
	L_ident        shift, and enter state 14

	Ident          goto state 52
	Stmt           goto state 53

State 2


	'('            shift, and enter state 40
	'false'        shift, and enter state 42
	'true'         shift, and enter state 43
	L_ident        shift, and enter state 14
	L_integ        shift, and enter state 44

	Ident          goto state 29
	Integer        goto state 30
	Expr6          goto state 51

State 3


	'!'            shift, and enter state 39
	'('            shift, and enter state 40
	'-'            shift, and enter state 41
	'false'        shift, and enter state 42
	'true'         shift, and enter state 43
	L_ident        shift, and enter state 14
	L_integ        shift, and enter state 44

	Ident          goto state 29
	Integer        goto state 30
	Expr6          goto state 31
	Expr5          goto state 50

State 4


	'!'            shift, and enter state 39
	'('            shift, and enter state 40
	'-'            shift, and enter state 41
	'false'        shift, and enter state 42
	'true'         shift, and enter state 43
	L_ident        shift, and enter state 14
	L_integ        shift, and enter state 44

	Ident          goto state 29
	Integer        goto state 30
	Expr6          goto state 31
	Expr5          goto state 32
	Expr4          goto state 49

State 5


	'!'            shift, and enter state 39
	'('            shift, and enter state 40
	'-'            shift, and enter state 41
	'false'        shift, and enter state 42
	'true'         shift, and enter state 43
	L_ident        shift, and enter state 14
	L_integ        shift, and enter state 44

	Ident          goto state 29
	Integer        goto state 30
	Expr6          goto state 31
	Expr5          goto state 32
	Expr4          goto state 33
	Expr3          goto state 48

State 6


	'!'            shift, and enter state 39
	'('            shift, and enter state 40
	'-'            shift, and enter state 41
	'false'        shift, and enter state 42
	'true'         shift, and enter state 43
	L_ident        shift, and enter state 14
	L_integ        shift, and enter state 44

	Ident          goto state 29
	Integer        goto state 30
	Expr6          goto state 31
	Expr5          goto state 32
	Expr4          goto state 33
	Expr3          goto state 34
	Expr2          goto state 47

State 7


	'!'            shift, and enter state 39
	'('            shift, and enter state 40
	'-'            shift, and enter state 41
	'false'        shift, and enter state 42
	'true'         shift, and enter state 43
	L_ident        shift, and enter state 14
	L_integ        shift, and enter state 44

	Ident          goto state 29
	Integer        goto state 30
	Expr6          goto state 31
	Expr5          goto state 32
	Expr4          goto state 33
	Expr3          goto state 34
	Expr2          goto state 35
	Expr1          goto state 46

State 8


	'!'            shift, and enter state 39
	'('            shift, and enter state 40
	'-'            shift, and enter state 41
	'false'        shift, and enter state 42
	'true'         shift, and enter state 43
	L_ident        shift, and enter state 14
	L_integ        shift, and enter state 44

	Ident          goto state 29
	Integer        goto state 30
	Expr6          goto state 31
	Expr5          goto state 32
	Expr4          goto state 33
	Expr3          goto state 34
	Expr2          goto state 35
	Expr1          goto state 36
	Expr           goto state 45

State 9


	'!'            shift, and enter state 39
	'('            shift, and enter state 40
	'-'            shift, and enter state 41
	'false'        shift, and enter state 42
	'true'         shift, and enter state 43
	L_ident        shift, and enter state 14
	L_integ        shift, and enter state 44
	%eof           reduce using rule 38

	Ident          goto state 29
	Integer        goto state 30
	Expr6          goto state 31
	Expr5          goto state 32
	Expr4          goto state 33
	Expr3          goto state 34
	Expr2          goto state 35
	Expr1          goto state 36
	Expr           goto state 37
	ListExpr       goto state 38

State 10


	'+'            shift, and enter state 27
	'-'            shift, and enter state 28

	AddOp          goto state 26

State 11


	'%'            shift, and enter state 23
	'*'            shift, and enter state 24
	'/'            shift, and enter state 25

	MulOp          goto state 22

State 12


	'!='           shift, and enter state 16
	'<'            shift, and enter state 17
	'<='           shift, and enter state 18
	'=='           shift, and enter state 19
	'>'            shift, and enter state 20
	'>='           shift, and enter state 21

	RelOp          goto state 15

State 13


	L_ident        shift, and enter state 14


State 14

	Ident -> L_ident .                                  (rule 13)

	'!='           reduce using rule 13
	'%'            reduce using rule 13
	'&&'           reduce using rule 13
	')'            reduce using rule 13
	'*'            reduce using rule 13
	'+'            reduce using rule 13
	','            reduce using rule 13
	'-'            reduce using rule 13
	'/'            reduce using rule 13
	';'            reduce using rule 13
	'<'            reduce using rule 13
	'<='           reduce using rule 13
	'='            reduce using rule 13
	'=='           reduce using rule 13
	'>'            reduce using rule 13
	'>='           reduce using rule 13
	'||'           reduce using rule 13
	%eof           reduce using rule 13


State 15

	%start_pRelOp -> RelOp .                            (rule 12)

	%eof           accept


State 16

	RelOp -> '!=' .                                     (rule 51)

	'!'            reduce using rule 51
	'('            reduce using rule 51
	'-'            reduce using rule 51
	'false'        reduce using rule 51
	'true'         reduce using rule 51
	L_ident        reduce using rule 51
	L_integ        reduce using rule 51
	%eof           reduce using rule 51


State 17

	RelOp -> '<' .                                      (rule 46)

	'!'            reduce using rule 46
	'('            reduce using rule 46
	'-'            reduce using rule 46
	'false'        reduce using rule 46
	'true'         reduce using rule 46
	L_ident        reduce using rule 46
	L_integ        reduce using rule 46
	%eof           reduce using rule 46


State 18

	RelOp -> '<=' .                                     (rule 47)

	'!'            reduce using rule 47
	'('            reduce using rule 47
	'-'            reduce using rule 47
	'false'        reduce using rule 47
	'true'         reduce using rule 47
	L_ident        reduce using rule 47
	L_integ        reduce using rule 47
	%eof           reduce using rule 47


State 19

	RelOp -> '==' .                                     (rule 50)

	'!'            reduce using rule 50
	'('            reduce using rule 50
	'-'            reduce using rule 50
	'false'        reduce using rule 50
	'true'         reduce using rule 50
	L_ident        reduce using rule 50
	L_integ        reduce using rule 50
	%eof           reduce using rule 50


State 20

	RelOp -> '>' .                                      (rule 48)

	'!'            reduce using rule 48
	'('            reduce using rule 48
	'-'            reduce using rule 48
	'false'        reduce using rule 48
	'true'         reduce using rule 48
	L_ident        reduce using rule 48
	L_integ        reduce using rule 48
	%eof           reduce using rule 48


State 21

	RelOp -> '>=' .                                     (rule 49)

	'!'            reduce using rule 49
	'('            reduce using rule 49
	'-'            reduce using rule 49
	'false'        reduce using rule 49
	'true'         reduce using rule 49
	L_ident        reduce using rule 49
	L_integ        reduce using rule 49
	%eof           reduce using rule 49


State 22

	%start_pMulOp -> MulOp .                            (rule 11)

	%eof           accept


State 23

	MulOp -> '%' .                                      (rule 45)

	'!'            reduce using rule 45
	'('            reduce using rule 45
	'-'            reduce using rule 45
	'false'        reduce using rule 45
	'true'         reduce using rule 45
	L_ident        reduce using rule 45
	L_integ        reduce using rule 45
	%eof           reduce using rule 45


State 24

	MulOp -> '*' .                                      (rule 43)

	'!'            reduce using rule 43
	'('            reduce using rule 43
	'-'            reduce using rule 43
	'false'        reduce using rule 43
	'true'         reduce using rule 43
	L_ident        reduce using rule 43
	L_integ        reduce using rule 43
	%eof           reduce using rule 43


State 25

	MulOp -> '/' .                                      (rule 44)

	'!'            reduce using rule 44
	'('            reduce using rule 44
	'-'            reduce using rule 44
	'false'        reduce using rule 44
	'true'         reduce using rule 44
	L_ident        reduce using rule 44
	L_integ        reduce using rule 44
	%eof           reduce using rule 44


State 26

	%start_pAddOp -> AddOp .                            (rule 10)

	%eof           accept


State 27

	AddOp -> '+' .                                      (rule 41)

	'!'            reduce using rule 41
	'('            reduce using rule 41
	'-'            reduce using rule 41
	'false'        reduce using rule 41
	'true'         reduce using rule 41
	L_ident        reduce using rule 41
	L_integ        reduce using rule 41
	%eof           reduce using rule 41


State 28

	AddOp -> '-' .                                      (rule 42)

	'!'            reduce using rule 42
	'('            reduce using rule 42
	'-'            reduce using rule 42
	'false'        reduce using rule 42
	'true'         reduce using rule 42
	L_ident        reduce using rule 42
	L_integ        reduce using rule 42
	%eof           reduce using rule 42


State 29

	Expr6 -> Ident .                                    (rule 20)

	'!='           reduce using rule 20
	'%'            reduce using rule 20
	'&&'           reduce using rule 20
	')'            reduce using rule 20
	'*'            reduce using rule 20
	'+'            reduce using rule 20
	','            reduce using rule 20
	'-'            reduce using rule 20
	'/'            reduce using rule 20
	';'            reduce using rule 20
	'<'            reduce using rule 20
	'<='           reduce using rule 20
	'=='           reduce using rule 20
	'>'            reduce using rule 20
	'>='           reduce using rule 20
	'||'           reduce using rule 20
	%eof           reduce using rule 20


State 30

	Expr6 -> Integer .                                  (rule 21)

	'!='           reduce using rule 21
	'%'            reduce using rule 21
	'&&'           reduce using rule 21
	')'            reduce using rule 21
	'*'            reduce using rule 21
	'+'            reduce using rule 21
	','            reduce using rule 21
	'-'            reduce using rule 21
	'/'            reduce using rule 21
	';'            reduce using rule 21
	'<'            reduce using rule 21
	'<='           reduce using rule 21
	'=='           reduce using rule 21
	'>'            reduce using rule 21
	'>='           reduce using rule 21
	'||'           reduce using rule 21
	%eof           reduce using rule 21


State 31

	Expr5 -> Expr6 .                                    (rule 27)

	'!='           reduce using rule 27
	'%'            reduce using rule 27
	'&&'           reduce using rule 27
	')'            reduce using rule 27
	'*'            reduce using rule 27
	'+'            reduce using rule 27
	','            reduce using rule 27
	'-'            reduce using rule 27
	'/'            reduce using rule 27
	';'            reduce using rule 27
	'<'            reduce using rule 27
	'<='           reduce using rule 27
	'=='           reduce using rule 27
	'>'            reduce using rule 27
	'>='           reduce using rule 27
	'||'           reduce using rule 27
	%eof           reduce using rule 27


State 32

	Expr4 -> Expr5 .                                    (rule 29)

	'!='           reduce using rule 29
	'%'            reduce using rule 29
	'&&'           reduce using rule 29
	')'            reduce using rule 29
	'*'            reduce using rule 29
	'+'            reduce using rule 29
	','            reduce using rule 29
	'-'            reduce using rule 29
	'/'            reduce using rule 29
	';'            reduce using rule 29
	'<'            reduce using rule 29
	'<='           reduce using rule 29
	'=='           reduce using rule 29
	'>'            reduce using rule 29
	'>='           reduce using rule 29
	'||'           reduce using rule 29
	%eof           reduce using rule 29


State 33

	Expr4 -> Expr4 . MulOp Expr5                        (rule 28)
	Expr3 -> Expr4 .                                    (rule 31)

	'!='           reduce using rule 31
	'%'            shift, and enter state 23
	'&&'           reduce using rule 31
	')'            reduce using rule 31
	'*'            shift, and enter state 24
	'+'            reduce using rule 31
	','            reduce using rule 31
	'-'            reduce using rule 31
	'/'            shift, and enter state 25
	';'            reduce using rule 31
	'<'            reduce using rule 31
	'<='           reduce using rule 31
	'=='           reduce using rule 31
	'>'            reduce using rule 31
	'>='           reduce using rule 31
	'||'           reduce using rule 31
	%eof           reduce using rule 31

	MulOp          goto state 59

State 34

	Expr3 -> Expr3 . AddOp Expr4                        (rule 30)
	Expr2 -> Expr3 .                                    (rule 33)

	'!='           reduce using rule 33
	'&&'           reduce using rule 33
	')'            reduce using rule 33
	'+'            shift, and enter state 27
	','            reduce using rule 33
	'-'            shift, and enter state 28
	';'            reduce using rule 33
	'<'            reduce using rule 33
	'<='           reduce using rule 33
	'=='           reduce using rule 33
	'>'            reduce using rule 33
	'>='           reduce using rule 33
	'||'           reduce using rule 33
	%eof           reduce using rule 33

	AddOp          goto state 60

State 35

	Expr2 -> Expr2 . RelOp Expr3                        (rule 32)
	Expr1 -> Expr2 . '&&' Expr1                         (rule 34)
	Expr1 -> Expr2 .                                    (rule 35)

	'!='           shift, and enter state 16
	'&&'           shift, and enter state 67
	')'            reduce using rule 35
	','            reduce using rule 35
	';'            reduce using rule 35
	'<'            shift, and enter state 17
	'<='           shift, and enter state 18
	'=='           shift, and enter state 19
	'>'            shift, and enter state 20
	'>='           shift, and enter state 21
	'||'           reduce using rule 35
	%eof           reduce using rule 35

	RelOp          goto state 61

State 36

	Expr -> Expr1 . '||' Expr                           (rule 36)
	Expr -> Expr1 .                                     (rule 37)

	')'            reduce using rule 37
	','            reduce using rule 37
	';'            reduce using rule 37
	'||'           shift, and enter state 66
	%eof           reduce using rule 37


State 37

	ListExpr -> Expr .                                  (rule 39)
	ListExpr -> Expr . ',' ListExpr                     (rule 40)

	','            shift, and enter state 65
	%eof           reduce using rule 39


State 38

	%start_pListExpr -> ListExpr .                      (rule 9)

	%eof           accept


State 39

	Expr5 -> '!' . Expr6                                (rule 26)

	'('            shift, and enter state 40
	'false'        shift, and enter state 42
	'true'         shift, and enter state 43
	L_ident        shift, and enter state 14
	L_integ        shift, and enter state 44

	Ident          goto state 29
	Integer        goto state 30
	Expr6          goto state 64

State 40

	Expr6 -> '(' . Expr ')'                             (rule 24)

	'!'            shift, and enter state 39
	'('            shift, and enter state 40
	'-'            shift, and enter state 41
	'false'        shift, and enter state 42
	'true'         shift, and enter state 43
	L_ident        shift, and enter state 14
	L_integ        shift, and enter state 44

	Ident          goto state 29
	Integer        goto state 30
	Expr6          goto state 31
	Expr5          goto state 32
	Expr4          goto state 33
	Expr3          goto state 34
	Expr2          goto state 35
	Expr1          goto state 36
	Expr           goto state 63

State 41

	Expr5 -> '-' . Expr6                                (rule 25)

	'('            shift, and enter state 40
	'false'        shift, and enter state 42
	'true'         shift, and enter state 43
	L_ident        shift, and enter state 14
	L_integ        shift, and enter state 44

	Ident          goto state 29
	Integer        goto state 30
	Expr6          goto state 62

State 42

	Expr6 -> 'false' .                                  (rule 23)

	'!='           reduce using rule 23
	'%'            reduce using rule 23
	'&&'           reduce using rule 23
	')'            reduce using rule 23
	'*'            reduce using rule 23
	'+'            reduce using rule 23
	','            reduce using rule 23
	'-'            reduce using rule 23
	'/'            reduce using rule 23
	';'            reduce using rule 23
	'<'            reduce using rule 23
	'<='           reduce using rule 23
	'=='           reduce using rule 23
	'>'            reduce using rule 23
	'>='           reduce using rule 23
	'||'           reduce using rule 23
	%eof           reduce using rule 23


State 43

	Expr6 -> 'true' .                                   (rule 22)

	'!='           reduce using rule 22
	'%'            reduce using rule 22
	'&&'           reduce using rule 22
	')'            reduce using rule 22
	'*'            reduce using rule 22
	'+'            reduce using rule 22
	','            reduce using rule 22
	'-'            reduce using rule 22
	'/'            reduce using rule 22
	';'            reduce using rule 22
	'<'            reduce using rule 22
	'<='           reduce using rule 22
	'=='           reduce using rule 22
	'>'            reduce using rule 22
	'>='           reduce using rule 22
	'||'           reduce using rule 22
	%eof           reduce using rule 22


State 44

	Integer -> L_integ .                                (rule 14)

	'!='           reduce using rule 14
	'%'            reduce using rule 14
	'&&'           reduce using rule 14
	')'            reduce using rule 14
	'*'            reduce using rule 14
	'+'            reduce using rule 14
	','            reduce using rule 14
	'-'            reduce using rule 14
	'/'            reduce using rule 14
	';'            reduce using rule 14
	'<'            reduce using rule 14
	'<='           reduce using rule 14
	'=='           reduce using rule 14
	'>'            reduce using rule 14
	'>='           reduce using rule 14
	'||'           reduce using rule 14
	%eof           reduce using rule 14


State 45

	%start_pExpr -> Expr .                              (rule 8)

	%eof           accept


State 46

	%start_pExpr1 -> Expr1 .                            (rule 7)

	%eof           accept


State 47

	%start_pExpr2 -> Expr2 .                            (rule 6)
	Expr2 -> Expr2 . RelOp Expr3                        (rule 32)

	'!='           shift, and enter state 16
	'<'            shift, and enter state 17
	'<='           shift, and enter state 18
	'=='           shift, and enter state 19
	'>'            shift, and enter state 20
	'>='           shift, and enter state 21
	%eof           accept

	RelOp          goto state 61

State 48

	%start_pExpr3 -> Expr3 .                            (rule 5)
	Expr3 -> Expr3 . AddOp Expr4                        (rule 30)

	'+'            shift, and enter state 27
	'-'            shift, and enter state 28
	%eof           accept

	AddOp          goto state 60

State 49

	%start_pExpr4 -> Expr4 .                            (rule 4)
	Expr4 -> Expr4 . MulOp Expr5                        (rule 28)

	'%'            shift, and enter state 23
	'*'            shift, and enter state 24
	'/'            shift, and enter state 25
	%eof           accept

	MulOp          goto state 59

State 50

	%start_pExpr5 -> Expr5 .                            (rule 3)

	%eof           accept


State 51

	%start_pExpr6 -> Expr6 .                            (rule 2)

	%eof           accept


State 52

	Stmt -> Ident . '=' Expr ';'                        (rule 19)

	'='            shift, and enter state 58


State 53

	%start_pStmt -> Stmt .                              (rule 1)
	Stmt -> Stmt . Stmt                                 (rule 18)

	';'            shift, and enter state 54
	L_ident        shift, and enter state 14
	%eof           accept

	Ident          goto state 52
	Stmt           goto state 57

State 54

	Stmt -> ';' .                                       (rule 17)

	';'            reduce using rule 17
	L_ident        reduce using rule 17
	%eof           reduce using rule 17


State 55

	%start_pListStmt -> ListStmt .                      (rule 0)
	ListStmt -> ListStmt . Stmt                         (rule 16)

	';'            shift, and enter state 54
	L_ident        shift, and enter state 14
	%eof           accept

	Ident          goto state 52
	Stmt           goto state 56

State 56

	ListStmt -> ListStmt Stmt .                         (rule 16)
	Stmt -> Stmt . Stmt                                 (rule 18)

	';'            shift, and enter state 54
			(reduce using rule 16)

	L_ident        shift, and enter state 14
			(reduce using rule 16)

	%eof           reduce using rule 16

	Ident          goto state 52
	Stmt           goto state 57

State 57

	Stmt -> Stmt . Stmt                                 (rule 18)
	Stmt -> Stmt Stmt .                                 (rule 18)

	';'            shift, and enter state 54
			(reduce using rule 18)

	L_ident        shift, and enter state 14
			(reduce using rule 18)

	%eof           reduce using rule 18

	Ident          goto state 52
	Stmt           goto state 57

State 58

	Stmt -> Ident '=' . Expr ';'                        (rule 19)

	'!'            shift, and enter state 39
	'('            shift, and enter state 40
	'-'            shift, and enter state 41
	'false'        shift, and enter state 42
	'true'         shift, and enter state 43
	L_ident        shift, and enter state 14
	L_integ        shift, and enter state 44

	Ident          goto state 29
	Integer        goto state 30
	Expr6          goto state 31
	Expr5          goto state 32
	Expr4          goto state 33
	Expr3          goto state 34
	Expr2          goto state 35
	Expr1          goto state 36
	Expr           goto state 75

State 59

	Expr4 -> Expr4 MulOp . Expr5                        (rule 28)

	'!'            shift, and enter state 39
	'('            shift, and enter state 40
	'-'            shift, and enter state 41
	'false'        shift, and enter state 42
	'true'         shift, and enter state 43
	L_ident        shift, and enter state 14
	L_integ        shift, and enter state 44

	Ident          goto state 29
	Integer        goto state 30
	Expr6          goto state 31
	Expr5          goto state 74

State 60

	Expr3 -> Expr3 AddOp . Expr4                        (rule 30)

	'!'            shift, and enter state 39
	'('            shift, and enter state 40
	'-'            shift, and enter state 41
	'false'        shift, and enter state 42
	'true'         shift, and enter state 43
	L_ident        shift, and enter state 14
	L_integ        shift, and enter state 44

	Ident          goto state 29
	Integer        goto state 30
	Expr6          goto state 31
	Expr5          goto state 32
	Expr4          goto state 73

State 61

	Expr2 -> Expr2 RelOp . Expr3                        (rule 32)

	'!'            shift, and enter state 39
	'('            shift, and enter state 40
	'-'            shift, and enter state 41
	'false'        shift, and enter state 42
	'true'         shift, and enter state 43
	L_ident        shift, and enter state 14
	L_integ        shift, and enter state 44

	Ident          goto state 29
	Integer        goto state 30
	Expr6          goto state 31
	Expr5          goto state 32
	Expr4          goto state 33
	Expr3          goto state 72

State 62

	Expr5 -> '-' Expr6 .                                (rule 25)

	'!='           reduce using rule 25
	'%'            reduce using rule 25
	'&&'           reduce using rule 25
	')'            reduce using rule 25
	'*'            reduce using rule 25
	'+'            reduce using rule 25
	','            reduce using rule 25
	'-'            reduce using rule 25
	'/'            reduce using rule 25
	';'            reduce using rule 25
	'<'            reduce using rule 25
	'<='           reduce using rule 25
	'=='           reduce using rule 25
	'>'            reduce using rule 25
	'>='           reduce using rule 25
	'||'           reduce using rule 25
	%eof           reduce using rule 25


State 63

	Expr6 -> '(' Expr . ')'                             (rule 24)

	')'            shift, and enter state 71


State 64

	Expr5 -> '!' Expr6 .                                (rule 26)

	'!='           reduce using rule 26
	'%'            reduce using rule 26
	'&&'           reduce using rule 26
	')'            reduce using rule 26
	'*'            reduce using rule 26
	'+'            reduce using rule 26
	','            reduce using rule 26
	'-'            reduce using rule 26
	'/'            reduce using rule 26
	';'            reduce using rule 26
	'<'            reduce using rule 26
	'<='           reduce using rule 26
	'=='           reduce using rule 26
	'>'            reduce using rule 26
	'>='           reduce using rule 26
	'||'           reduce using rule 26
	%eof           reduce using rule 26


State 65

	ListExpr -> Expr ',' . ListExpr                     (rule 40)

	'!'            shift, and enter state 39
	'('            shift, and enter state 40
	'-'            shift, and enter state 41
	'false'        shift, and enter state 42
	'true'         shift, and enter state 43
	L_ident        shift, and enter state 14
	L_integ        shift, and enter state 44
	%eof           reduce using rule 38

	Ident          goto state 29
	Integer        goto state 30
	Expr6          goto state 31
	Expr5          goto state 32
	Expr4          goto state 33
	Expr3          goto state 34
	Expr2          goto state 35
	Expr1          goto state 36
	Expr           goto state 37
	ListExpr       goto state 70

State 66

	Expr -> Expr1 '||' . Expr                           (rule 36)

	'!'            shift, and enter state 39
	'('            shift, and enter state 40
	'-'            shift, and enter state 41
	'false'        shift, and enter state 42
	'true'         shift, and enter state 43
	L_ident        shift, and enter state 14
	L_integ        shift, and enter state 44

	Ident          goto state 29
	Integer        goto state 30
	Expr6          goto state 31
	Expr5          goto state 32
	Expr4          goto state 33
	Expr3          goto state 34
	Expr2          goto state 35
	Expr1          goto state 36
	Expr           goto state 69

State 67

	Expr1 -> Expr2 '&&' . Expr1                         (rule 34)

	'!'            shift, and enter state 39
	'('            shift, and enter state 40
	'-'            shift, and enter state 41
	'false'        shift, and enter state 42
	'true'         shift, and enter state 43
	L_ident        shift, and enter state 14
	L_integ        shift, and enter state 44

	Ident          goto state 29
	Integer        goto state 30
	Expr6          goto state 31
	Expr5          goto state 32
	Expr4          goto state 33
	Expr3          goto state 34
	Expr2          goto state 35
	Expr1          goto state 68

State 68

	Expr1 -> Expr2 '&&' Expr1 .                         (rule 34)

	')'            reduce using rule 34
	','            reduce using rule 34
	';'            reduce using rule 34
	'||'           reduce using rule 34
	%eof           reduce using rule 34


State 69

	Expr -> Expr1 '||' Expr .                           (rule 36)

	')'            reduce using rule 36
	','            reduce using rule 36
	';'            reduce using rule 36
	%eof           reduce using rule 36


State 70

	ListExpr -> Expr ',' ListExpr .                     (rule 40)

	%eof           reduce using rule 40


State 71

	Expr6 -> '(' Expr ')' .                             (rule 24)

	'!='           reduce using rule 24
	'%'            reduce using rule 24
	'&&'           reduce using rule 24
	')'            reduce using rule 24
	'*'            reduce using rule 24
	'+'            reduce using rule 24
	','            reduce using rule 24
	'-'            reduce using rule 24
	'/'            reduce using rule 24
	';'            reduce using rule 24
	'<'            reduce using rule 24
	'<='           reduce using rule 24
	'=='           reduce using rule 24
	'>'            reduce using rule 24
	'>='           reduce using rule 24
	'||'           reduce using rule 24
	%eof           reduce using rule 24


State 72

	Expr3 -> Expr3 . AddOp Expr4                        (rule 30)
	Expr2 -> Expr2 RelOp Expr3 .                        (rule 32)

	'!='           reduce using rule 32
	'&&'           reduce using rule 32
	')'            reduce using rule 32
	'+'            shift, and enter state 27
	','            reduce using rule 32
	'-'            shift, and enter state 28
	';'            reduce using rule 32
	'<'            reduce using rule 32
	'<='           reduce using rule 32
	'=='           reduce using rule 32
	'>'            reduce using rule 32
	'>='           reduce using rule 32
	'||'           reduce using rule 32
	%eof           reduce using rule 32

	AddOp          goto state 60

State 73

	Expr4 -> Expr4 . MulOp Expr5                        (rule 28)
	Expr3 -> Expr3 AddOp Expr4 .                        (rule 30)

	'!='           reduce using rule 30
	'%'            shift, and enter state 23
	'&&'           reduce using rule 30
	')'            reduce using rule 30
	'*'            shift, and enter state 24
	'+'            reduce using rule 30
	','            reduce using rule 30
	'-'            reduce using rule 30
	'/'            shift, and enter state 25
	';'            reduce using rule 30
	'<'            reduce using rule 30
	'<='           reduce using rule 30
	'=='           reduce using rule 30
	'>'            reduce using rule 30
	'>='           reduce using rule 30
	'||'           reduce using rule 30
	%eof           reduce using rule 30

	MulOp          goto state 59

State 74

	Expr4 -> Expr4 MulOp Expr5 .                        (rule 28)

	'!='           reduce using rule 28
	'%'            reduce using rule 28
	'&&'           reduce using rule 28
	')'            reduce using rule 28
	'*'            reduce using rule 28
	'+'            reduce using rule 28
	','            reduce using rule 28
	'-'            reduce using rule 28
	'/'            reduce using rule 28
	';'            reduce using rule 28
	'<'            reduce using rule 28
	'<='           reduce using rule 28
	'=='           reduce using rule 28
	'>'            reduce using rule 28
	'>='           reduce using rule 28
	'||'           reduce using rule 28
	%eof           reduce using rule 28


State 75

	Stmt -> Ident '=' Expr . ';'                        (rule 19)

	';'            shift, and enter state 76


State 76

	Stmt -> Ident '=' Expr ';' .                        (rule 19)

	';'            reduce using rule 19
	L_ident        reduce using rule 19
	%eof           reduce using rule 19


-----------------------------------------------------------------------------
Grammar Totals
-----------------------------------------------------------------------------
Number of rules: 52
Number of terminals: 24
Number of non-terminals: 28
Number of states: 77
